# calc_demo_pycalphad

./: README.md  pyproject.toml
01_test_CaO_MnO/: CaO-MnO.xml  CaO-MnO2.xml  CaO_MnO_equilibrium.ipynb  CaO_MnO_phase_diagram.ipynb  Comparison with FactSage.md
02_test_CaO_MgO/: CaO-MgO.xml  CaO-MgO2.xml  Comparison with FactSage.md  calc_equilibrium.ipynb  phase_diagram.ipynb
