[project]
name = "paper-pycalphad"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "espei>=0.9.0",
    "ipykernel>=7.2.0",
    "pycalphad>=0.11.1",
    "pycalphad-xml>=0.1.1",
    "setuptools==81.0.0",
    "numpy<2.0",
    "openpyxl>=3.1.5",
]
